# malak_ros

./: README.md
assessment_world/: .gitignore  readme.md
assessment_world/launch/: assessment_world.launch
assessment_world/scripts/: move_semi_random  repeating
beginner_tutorials/: package.xml
malak_amcl/: CMakeLists.txt  package.xml
malak_amcl/launch/: amcl.launch  amcl_demo.launch
malak_amcl/maps/: map.yaml  map2.yaml
malak_autonomous/: CMakeLists.txt  package.xml
malak_autonomous/find_object_2d_config/: config.ini
malak_autonomous/launch/: 2d_object.launch  operated_points.launch  points.launch
malak_autonomous/scripts/: action_controller.py  echo_to_list.py  point_list.py  pose_next.py  poses_new  tf_test.py
malak_control/: CMakeLists.txt  package.xml
malak_control/config/: diff_drive.yaml  joint_limits.yaml
malak_control/launch/: control.launch
malak_gui/: CMakeLists.txt  package.xml
malak_gui/launch/: gui.launch  malak.launch
malak_gui/scripts/: design.py  main.py  main.ui  res_rc.py
malak_nav/: CMakeLists.txt  package.xml
malak_nav/launch/: amcl.launch  malak_nav.launch  move_base.launch
malak_nav/maps/: map.pgm
malak_nav/param/: base_local_planner_params.yaml  costmap_common_params_malak.yaml  dwa_local_planner_params_malak.yaml  global_costmap_params.yaml  local_costmap_params.yaml
malak_nav/rviz/: malak_navigation.rviz  malak_navigation2.rviz  turtlebot3_navigation.rviz
malak_package1/: CMakeLists.txt  package.xml
malak_package1/launch/: pubsub.launch
malak_package1/scripts/: listener.py  listener.py.bak
malakrobo_control/: CMakeLists.txt  package.xml
malakrobo_control/config/: malakrobo_control.yaml
malakrobo_control/launch/: malakrobo_control.launch
malakrobo_control2/: CMakeLists.txt
malakrobo_control2/config/: malakrobo_control.yaml
malakrobo_control2/launch/: malakrobo_control.launch
malakrobo_description/: CMakeLists.txt  package.xml
malakrobo_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
malakrobo_description/meshes/: ball_roller_1.stl  wheel_left_1.stl  wheel_right_1.stl
malakrobo_description/urdf/: malakrobo.gazebo  malakrobo.gazebo.bak  malakrobo.gazebo.bak_latest  malakrobo.xacro  malakrobo.xacro.bak  malakrobo.xacro.bak3  malakrobo2.xacro  materials.xacro
malakrobo_mapping/: CMakeLists.txt  package.xml
malakrobo_mapping/launch/: lidar_mapping.launch  simulation.launch  simulation_mapping.launch
malakrobo_mapping/rviz/: mapping.rviz
malakrobo_publisher/launch/: publish.launch  spin.launch
malakrobo_publisher/scripts/: .teleop_key.py.swp  add_obstacles.sh  full_start.sh  move2goal.py  pose.py  spin.py  start_gazebo.sh  start_keyboard.sh  start_rob_obj.sh  talker.py  talker.py.bak  teleop_key.py
malakrobo_publisher2/: CMakeLists.txt  package.xml
malakrobo_publisher2/launch/: key_control.launch
malakrobo_publisher2/scripts/: add_obstacles.sh  full_start.sh  part_start.sh  start_gazebo.sh  start_keyboard.sh  start_rob_obj.sh  (+1 more)
robo1_description/: CMakeLists.txt  package.xml
robo3_description/: CMakeLists.txt  package.xml
robot_description/: CMakeLists.txt  package.xml
robot_description/urdf/: turtlebot3_burger.urdf.xacro
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: robot.launch
test2_description/: CMakeLists.txt  package.xml
test3_description/: CMakeLists.txt  package.xml
test4_description/: CMakeLists.txt  package.xml
(+43 files in other folders)
